# hostess-ai

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml
backend/: config.py  deps.py  main.py
backend/api/: webhook_n8n.py  ws_admin.py  ws_voice.py
backend/core/: exceptions.py  logging.py  sentry.py
backend/db/: database.py  migrations.py
backend/db/repositories/: analytics_repo.py  session_repo.py
backend/models/: analytics.py  n8n_payloads.py  session.py
backend/services/: admin_broadcaster.py  analytics.py  n8n_client.py  openai_realtime.py  session_manager.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.jsx
frontend/src/components/: AdminDashboard.jsx  AudioWaveform.jsx  BookingTable.jsx  VoiceWidget.jsx
frontend/src/hooks/: useAdminSocket.js  useVoiceSession.js
frontend/src/services/: websocket.js
frontend/src/styles/: globals.css
n8n/workflows/: check_availability.json  confirm_booking.json  post_call_analytics.json  release_on_hold.json
nginx/: nginx.conf
scripts/: migrate_db.py  test_telegram.py
