[tool.poetry]
name = "python-template"
version = "0.1.0"
description = "Base Python Template Project"
authors = ["Your Name <you@example.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
pydantic-settings = "^2.14.2"
python-dotenv = "^1.2.2"

[tool.poetry.group.dev.dependencies]
pytest = "^9.1.1"
pytest-asyncio = "^1.4.0"
pytest-cov = "^7.1.0"
ruff = ">=0.9.0"
mypy = "^2.1.0"
pre-commit = "^4.6.0"
pyright = "^1.1.410"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100
target-version = "py311"
exclude = [".venv", "__pycache__", "logs", "data"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "S", "W", "N", "UP", "C4", "SIM", "RUF", "A", "DTZ", "TID", "ASYNC", "PT"]
ignore = ["F401", "E501", "B008", "RUF001", "RUF002", "RUF003", "N815", "S107"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101", "S105", "S106", "S108"]
"**/tests/*" = ["S101", "S105", "S106", "S108"]

[tool.mypy]
python_version = "3.11"
strict = true
exclude = ["^\\.venv/", "^__pycache__/"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
asyncio_mode = "auto"
filterwarnings = ["ignore::ResourceWarning"]
markers = [
    "remote: marks tests that require a running external server"
]

[tool.pyright]
typeCheckingMode = "strict"
extraPaths = ["."]
executionEnvironments = [
  { root = "tests", reportUnknownMemberType = "none", reportUnknownParameterType = "none", reportUnknownVariableType = "none", reportMissingParameterType = "none", reportUnknownArgumentType = "none", reportUnknownLambdaType = "none" }
]
