[tool.poetry]
name = "restaurant-voice-agent"
version = "0.1.0"
description = "hostess-ai"
authors = ["PyDevDeep"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.13"
fastapi = "^0.138.0"
uvicorn = {extras = ["standard"], version = "^0.49.0"}
websockets = "^12.0"
openai = "^1.23.0"
aiosqlite = "^0.20.0"
httpx = "^0.27.0"
pydantic-settings = "^2.5.0"
structlog = "^24.2.0"
sentry-sdk = {extras = ["fastapi"], version = "^2.2.0"}
python-dotenv = "^1.2.2"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.0"
pytest-asyncio = "^0.24.0"
pytest-cov = "^7.1.0"
pytest-httpx = "^0.30.0"
ruff = ">=0.9.0"
mypy = "^2.1.0"
pre-commit = "^4.6.0"
pyright = "^1.1.410"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100
target-version = "py313"
exclude = [".venv", "__pycache__", "logs", "data"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "S", "W", "N", "UP", "C4", "SIM", "RUF", "A", "DTZ", "TID", "ASYNC", "PT"]
ignore = ["F401", "E501", "B008", "RUF001", "RUF002", "RUF003", "N815", "S107"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101", "S105", "S106", "S108"]
"**/tests/*" = ["S101", "S105", "S106", "S108"]

[tool.mypy]
python_version = "3.13"
strict = true
exclude = ["^\\.venv/", "^__pycache__/"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
asyncio_mode = "auto"
filterwarnings = ["ignore::ResourceWarning"]
markers = [
    "remote: marks tests that require a running external server"
]

[tool.coverage.run]
source = ["backend"]
omit = ["*/migrations.py"]

[tool.pyright]
typeCheckingMode = "strict"
extraPaths = ["."]
executionEnvironments = [
  { root = "tests", reportUnknownMemberType = "none", reportUnknownParameterType = "none", reportUnknownVariableType = "none", reportMissingParameterType = "none", reportUnknownArgumentType = "none", reportUnknownLambdaType = "none" }
]
